--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,27 @@ footer a {
   color: #024e76;
 }
 
+/* Hero Style Start */
+.hero {
+  padding: 60px;
+  background-image: url("https://static.fullstack-bootcamp.com/module-1/hero-bg.jpg");
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+/* Hero Style End */
+
+/* Hero Form Start */
+.hero-form {
+  background-color: #fce138;
+  padding: 20px;
+  width: 500px;
+  color: #024e76;
+  border: solid 3px #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
+}
+/* Hero Form End */
+
