style what we do section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,3 +129,26 @@ footer a {
 }
 /* Hero Form End */
 
+.intro {
+  text-align: center;
+}
+
+.intro h2 {
+  /* add this alongside your other declarations */
+  display: inline-block;
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #fce138;
+}
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+  margin: 0 auto;
+}
+
