--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,17 +133,6 @@ footer a {
   text-align: center;
 }
 
-.intro h2 {
-  /* add this alongside your other declarations */
-  display: inline-block;
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
-}
-
 .intro p {
   line-height: 1.7;
   color: #39a6b2;
@@ -152,3 +141,48 @@ footer a {
   margin: 0 auto;
 }
 
+.steps { 
+  text-align: center;
+  background: #fce138;
+}
+
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
+.steps div {
+  margin-bottom: 80px;
+}
+
+.steps img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p {
+  color: #39a6b2;
+  font-size: 23px;
+}
+
+.steps span {
+  font-size: 38px;
+}
