finished styling privacy policy and run buddy

--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -7,8 +7,32 @@
 
 .page-title {
     color: #fce138;
+    display: inline-block;
+    border-bottom: 4px solid #fce138;
+    padding: 0 80px 15px 80px;
+    font-weight: normal;
+    font-size: 42px;
+    font-style: italic;
 }
 
-.page-title h2 {
-    display: inline-block
+.secondary-content {
+      width: 80%;
+      margin: 0 auto;
+      color: #024e76;
+}
+
+.secondary-content h3 {
+      font-style: 25px;
+      margin: 20px 0;
+}
+
+.secondary-content p {
+    font-style: 16px;
+    line-height: 1.5;
+    margin: 20px 0;
+}
+
+.secondary-content li {
+    color: #39a6b2;
+    margin: 10px 0
 }
