add content to hero, replace image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ footer a {
 /* Hero Style Start */
 .hero {
   padding: 60px;
-  background-image: url("https://static.fullstack-bootcamp.com/module-1/hero-bg.jpg");
+  background-image: url("../images/hero-bg.jpg");
   height: 600px;
   background-size: cover;
   background-position: center;
