add flexbox to the hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,17 +60,18 @@ footer {
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 footer h2 {
-  display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -83,23 +84,38 @@ footer a {
 .hero {
   padding: 60px;
   background-image: url("../images/hero-bg.jpg");
-  height: 600px;
   background-size: cover;
   background-position: center;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 /* Hero Style End */
+
+/* Hero CTA Start */
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+.heor-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
+/* Hero CTA End */
 
 /* Hero Form Start */
 .hero-form {
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
   border: solid 3px #024e76;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
+  width: 40%;
+  margin: 3.5%;
 }
 
 .hero-form h3 {
