altered html and css for flexbox rules

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,29 +150,26 @@ footer a {
 }
 /* Hero Form End */
 
-.intro {
-  text-align: center;
-}
-
 .intro p {
   line-height: 1.7;
   color: #39a6b2;
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .steps { 
-  text-align: center;
   background: #fce138;
 }
 
 .section-title {
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35 px auto;
+  width: 50%;
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
 }
 
@@ -209,7 +206,6 @@ footer a {
 }
 
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -266,7 +262,6 @@ footer a {
 /* Reach Out Style Start*/
 .contact {
   background: #024e76;
-  text-align: center;
 }
 
 .contact h2 {
@@ -304,3 +299,7 @@ footer a {
 }
 
 /* REACH OUT STYLES END */
+
+.flex-row {
+  display: flex;
+}
