fixed typo from heor to hero

--- a/assets/images/assets/css/style.css
+++ b/assets/images/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -9,7 +9,8 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/* apply styles to <header> */
+
+/* HEADER / NAV BAR STYLES START */
 
 header {
   padding: 20px 35px;
@@ -21,9 +22,9 @@ header {
 
 header h1 {
   font-weight: bold;
+  margin: 0;
   font-size: 36px;
   color: #fce138;
-  margin: 0;
 }
 
 header a {
@@ -49,24 +50,18 @@ header nav ul li a {
   font-size: 1.55vw;
 }
 
-header h1 {
-  font-weight: bold;
-  font-size: 36px;
-  color: #fce138;
-  margin: 0;
-}
+/* HEADER / NAVBAR STYLES END */
 
-/* Header / Navbar Styles End */
 
-/* Footer Styles Start */
 
+/* FOOTER STYLES START */
 footer {
   background: #fce138;
-  width: 100%;
   padding: 40px 35px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 footer h2 {
@@ -83,16 +78,16 @@ footer div {
 footer a {
   color: #024e76;
 }
+/* END FOOTER STYLES */
 
-/* End Footer */
-
-/*Style All Section Tags */
+/* STYLE ALL SECTION TAGS */
 section {
   padding: 60px;
 }
-/* Hero Style Start */
+
+/* HERO STYLES START */
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url('../images/hero-bg.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -108,18 +103,18 @@ section {
   font-size: 18px;
   line-height: 1.3;
 }
+
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
 }
 
-/* Hero Form Start */
 .hero-form {
+  border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
   color: #024e76;
-  border: 3px solid #024e76;
   width: 40%;
   margin: 3.5%;
 }
@@ -128,7 +123,6 @@ section {
   font-size: 24px;
   margin: 0;
 }
-
 .hero-form p {
   margin: 5px 0 15px 0;
 }
@@ -140,10 +134,10 @@ section {
   font-size: 16px;
   color: #024e76;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 15px; 
 }
 
-.hero-form label{
+.hero-form label {
   margin: 0 5px;
 }
 
@@ -153,36 +147,19 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-}
-/* Hero Form End */
+} 
+/* HERO STYLES END */
 
-/*What We Do Style */
 
-.intro p {
-  line-height: 1.7;
-  color: #39a6b2;
-  width: 80%;
-  font-size: 20px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-/*What We Do Style End */
-
-/* What You Do Styles Start*/
-
-.steps { 
-  background: #fce138;
-}
-
+/* SECTION TITLE STYLES START */
 .section-title {
+  font-size: 55px;
+  border-bottom: 3px solid;
+  color: #024e76;
   padding-bottom: 20px;
   text-align: center;
-  margin: 0 auto 35 px auto;
+  margin: 0 auto 35px auto;
   width: 50%;
-  font-size: 55px;
-  color: #024e76;
-  border-bottom: 3px solid;
 }
 
 .primary-border {
@@ -191,6 +168,25 @@ section {
 
 .secondary-border {
   border-color: #39a6b2;
+}
+/* SECTION TITLE STYLES END */
+
+/* WHAT WE DO STYLES */
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
+}
+/* WHAT YOU DO STYLES END */
+
+
+/* WHAT YOU DO STYLES START */
+.steps { 
+  background: #fce138;
 }
 
 .step {
@@ -221,12 +217,13 @@ section {
   flex: 1 12%;
   margin-right: 20px;
 }
-.stepp-text {
-  flex: 12;
-}
 
 .step-img img {
   max-width: 100%;
+}
+
+.step-text {
+  flex: 12;
 }
 
 .step-text p {
@@ -240,6 +237,9 @@ section {
   color: #024e76;
 }
 
+/* WHAT YOU DO STYLES END */
+
+/* MEET THE TRAINERS START */
 .trainers {
   width: 100%;
   margin: 0 auto;
@@ -250,9 +250,9 @@ section {
 
 .trainer {
   margin: 20px;
+  flex: 1;
   background: #024e76;
   color: #fce138;
-  flex: 1;
 }
 
 .trainer img {
@@ -262,14 +262,6 @@ section {
 .trainer-bio {
   padding: 25px;
   line-height: 1.3;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
 }
 
 .trainer-bio h3 {
@@ -285,8 +277,9 @@ section {
 .trainer-bio p {
   font-size: 17px;
 }
+/* TRAINER STYLES END */
 
-/* Reach Out Style Start*/
+/* REACH OUT STYLES START */
 .contact {
   background: #024e76;
 }
@@ -326,10 +319,6 @@ section {
   font-style: normal;
 }
 
-.contact-info a {
-  color: #fce138;
-}
-
 .contact-form input, .contact-form textarea {
   border: 1px solid #024e76;
   display: block;
@@ -351,16 +340,22 @@ section {
   font-size: 16px;
 }
 
-/* REACH OUT STYLES END */
-
-.flex-row {
-  display: flex;
+.contact-info a {
+  color: #fce138;
 }
 
+
+/* REACH OUT STYLES END */
+
+/* UTILITIES */
 .text-left {
   text-align: left;
 }
 
 .text-right {
   text-align: right;
+}
+
+.flex-row {
+  display: flex;
 }
