created media query for 980, 768 and 575 px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,3 +416,51 @@ section {
     flex: 1 100%;
   }
 }
+
+@media screen and (max-width:768px) {
+  section {
+    padding: 30px 15px;
+  }
+
+  .step h3 {
+    flex: 1 100%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .step-img {
+    flex: 0 32%;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .step-text {
+    flex: 100%;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .hero-form button {
+    width: 100%
+  }
+
+  .section-title {
+    width: 100%;
+  }
+
+  .trainer {
+    flex: 0 100%
+  }
+  
+  .contact-info {
+    text-align: center;
+  }
+  .contact-info > * {
+    flex: 0 100%;
+  }
+
+  .contact-form {
+    order: 3;
+  }
+}
