--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 header h1 {
@@ -24,6 +31,7 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -47,6 +55,14 @@ header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 header h1 {
@@ -94,11 +110,13 @@ section {
 .hero {
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-cta {
@@ -108,6 +126,7 @@ section {
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .hero-cta h2 {
   font-style: italic;
@@ -117,10 +136,11 @@ section {
 
 /* Hero Form Start */
 .hero-form {
-  background-color: #fce138;
+  background-color: rgba(252, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   border: 3px solid #024e76;
+  border-radius: 15px;
   width: 40%;
   margin: 3.5%;
 }
@@ -142,6 +162,13 @@ section {
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 15px;
+  background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus, .form-input textarea:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .hero-form label{
@@ -154,7 +181,13 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 15px;
 }
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
+}
+
 /* Hero Form End */
 
 /*What We Do Style */
@@ -198,13 +231,20 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #39a6b2;
 }
 
+.step:nth-child(even) {
+  border-bottom: 1px solid #39a6b2;
+}
+
+.step:last-child {
+  border-bottom: none;
+}
 .step h3 {
   color: #024e76;
   font-size: 46px;
@@ -333,6 +373,7 @@ section {
 
 .contact-form input, .contact-form textarea {
   border: 1px solid #024e76;
+  border-radius: 15px;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
@@ -342,14 +383,25 @@ section {
   margin-top: 5px;
 }
 
+.contact-form-input:focus, .contact-form textarea:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
+}
+
 .contact-form button {
   width: 100%;
   border: none;
+  border-radius: 15px;
   background: #fce138;
   color: #024e76;
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
 }
 
 /* REACH OUT STYLES END */
@@ -370,6 +422,7 @@ section {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative
   }
 
   header h1 {
