--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,13 +65,6 @@ header nav ul li a:hover {
   text-shadow: none;
 }
 
-header h1 {
-  font-weight: bold;
-  font-size: 36px;
-  color: #fce138;
-  margin: 0;
-}
-
 /* Header / Navbar Styles End */
 
 /* Footer Styles Start */
@@ -116,7 +109,6 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-cta {
@@ -126,12 +118,13 @@ section {
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 /* Hero Form Start */
@@ -143,6 +136,11 @@ section {
   border-radius: 15px;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
 }
 
 .hero-form h3 {
@@ -166,7 +164,7 @@ section {
   background-color: rgba(255,255,255, 0.75);
 }
 
-.form-input:focus, .form-input textarea:focus {
+.form-input:focus {
   background-color: rgba(255,255,255, 1);
   outline: none;
 }
@@ -181,11 +179,7 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-  border-radius: 15px;
-}
-
-.hero-form button:hover {
-  background-color: #39a6b2;  
+  border-radius: 10px;
 }
 
 /* Hero Form End */
@@ -210,13 +204,13 @@ section {
 }
 
 .section-title {
+  font-size: 48px;
+  border-bottom: 3px solid;
+  color: #024e76;
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto 35px auto;
   width: 50%;
-  font-size: 48px;
-  color: #024e76;
-  border-bottom: 3px solid;
 }
 
 .primary-border {
@@ -235,10 +229,6 @@ section {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #39a6b2;
-}
-
-.step:nth-child(even) {
   border-bottom: 1px solid #39a6b2;
 }
 
@@ -373,7 +363,6 @@ section {
 
 .contact-form input, .contact-form textarea {
   border: 1px solid #024e76;
-  border-radius: 15px;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
@@ -381,6 +370,8 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
 }
 
 .contact-form-input:focus, .contact-form textarea:focus {
